fix double scrollbar issue in cdcbot content page (#62)
* fix double scrollbar issue in cdcbot content page

* fix loader css

--- a/assets/css/cdc.css
+++ b/assets/css/cdc.css
@@ -1,11 +1,10 @@
-html, body {
-    height: 100%;
-}
+
 body.CDC {
     /* background: #F5F5F5; */
     font-family: "Open Sans","Segoe UI","Helvetica Neue",arial,sans-serif;
     padding: 0;
     margin: 0;
+    overflow-y: hidden;
 }
 .CDC main {
     margin-top: 60px;
@@ -13,41 +12,32 @@ body.CDC {
     min-height: calc(100vh - 60px);
 }
 .CDC-iframe-wrapper {
-    top: 32px;
-    /*width: 92.5%;*/
-    width: 100%;
-    margin: auto;
-    position: relative;
-    position: relative;
-    padding-bottom: 100%;
-    padding-top: 0;
-    height: 0;
-}
-@media(min-width: 699px) {
-    .CDC-iframe-wrapper {
-        /*width: 600px;*/
-        width: 100%;
-        padding-bottom: 60%;
-    }
-}
-@media(min-width: 992px) {
-    .CDC-iframe-wrapper {
-        padding-bottom: 60%;
-    }
-}
-.CDC-iframe-wrapper iframe {
-    position: absolute;
-    top:0;
+    position: fixed;
+    z-index: 999;
+    top: 72px;
     left: 0;
-    width: 100%;
-    height: calc(100vh - 60px);
+    bottom: 0;
+    right: 0;
 }
-@media (min-width: 550px) {
-    .CDC-iframe-wrapper iframe {
-        height: 516px;
+.iframe-body,
+#cdcbotFrame {
+    height: 100%;
+    /* height: 540px; */
+}
+@media(min-width: 500px) {
+    .iframe-body,
+    #cdcbotFrame {
+        height: 82.5vh;
     }
 }
-
+#cdcbotFrame {
+    z-index: 99999;
+    background-color: white;
+    overflow-y: scroll;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
 .cdc-banner-bar {
     padding-left: 4px;
     padding-right: 4px;
@@ -56,16 +46,17 @@ body.CDC {
     z-index: 10;
     width: 100%;
     top: 0;
+    box-shadow: 0 3px 3px grey;
 }
 .cdc-banner-bar img {
-    width: 100px;
+    width: 90px;
     display: inline-block;
     margin-right: 4px;
     position: relative;
     top: 4px;
 }
 .cdc-banner-bar .banner-title {
-    font-size: 1.25em;
+    font-size: 1em;
     font-weight: 500;
     display: inline-block;
     vertical-align: middle;
@@ -73,6 +64,11 @@ body.CDC {
     position: relative;
     top: -20px;
     left: 8px;
+}
+@media (min-width: 500px) {
+    .cdc-banner-bar .banner-title {
+        font-size: 1.25em;
+    }
 }
 @media (min-width: 699px) {
     .cdc-banner-bar .banner-title {
@@ -85,9 +81,10 @@ body.CDC {
     justify-content: center;
     align-items: center;
     margin: 0;
-    position: absolute;
+    position: fixed;
     top: 45%;
     left: 50%;
+    z-index: 9999;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
